test/constrained-generics/contextManager/basic-context-mismatch.good
basic-context-mismatch.chpl:1: In 'implements contextManager' statement:
basic-context-mismatch.chpl:1: error: when checking this implements statement
basic-context-mismatch.chpl:6: note: this implementation of the required function enterContext
basic-context-mismatch.chpl:6: note: has return type 'int(64)'
$CHPL_HOME/modules/internal/ChapelContext.chpl:nnnn: note: which does not match the expected return type 'string'
$CHPL_HOME/modules/internal/ChapelContext.chpl:nnnn: note: the required function enterContext in the interface contextManager is declared here
